--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                 class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/Himanshupal19011252"><i class="fa-brands fa-github"></i></a>
                     </div>
-                    <a href="fontend_resume_u1.pdf" download class="btn btn2">Download Resume</a>
+                    <a href="mynewresume.pdf" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
